deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  namespace: kube-system
  labels:
    app: my-web-app
spec:
  replicas: 2 # We can scale this later (set min/max replicas)
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
        - name: my-web-app
          image: gaurav22927/my-web-app:latest
          ports:
            - containerPort: 80
