service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app-service
  namespace: default
spec:
  selector:
    app: my-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
